--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,18 +7,22 @@
      <link rel="stylesheet" href="style.css">
     <title>Portfolio Parizet Martin</title>
 </head>
-<header>
-    <div class="header_left">
-        <img src="IMG/header left fondu.png" alt="header left fondu">
-    </div>
-    <div class="fond_header">
-        <div class="Nom"><h1>Martin Parizet</h1></div>
-    </div>
-    <div class="header_right">
-        <img src="IMG/header right fondu.png" alt="header droite fondu">
-    </div>
-</header>
 <body>
-    <p>TEST</p>
+    <div class="body_L1">
+        <div class="body_L1_left">
+            <img src="IMG/header left fondu.png" alt="body_L1_left">
+        </div>
+        <div class="body_L1_fond">
+            <div class="Nom"><h1>Martin Parizet</h1></div>
+        </div>
+        <div class="body_L1_right">
+            <img src="IMG/header right fondu.png" alt="body_L1_right">
+        </div>
+    </div>
+    <div class="mid_body">
+        <div class="mid_body_left"><img src="IMG/bodymidleft.png" alt=""></div>
+        <div class="mid_body_centre"></div>
+        <div class="mid_body_right"><img src="IMG/bodymidright.png" alt=""></div>
+    </div>
 </body>
 </html>
