--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <img src="IMG/photo_profil.jpg" alt="photo_profil">
-        <p class="acceuil">Acceuil</p>
-        <p>sources</p>
+        <p>Télécharger CV</p>
+        <p>Formations</p>
         <p>Contact</p>
-        <p>azertyuiop</p>
+        <p class="sources">Sources</p>
     </header>
     <div class="body_L1">
         <div class="body_L1_left">
@@ -21,6 +21,9 @@
         </div>
         <div class="body_L1_fond">
             <h1>Martin Parizet</h1>
+            <div class="body_L1_box">
+                <p>Étudiant en BTS SIO option Slam</p>
+            </div>
         </div>
         <div class="body_L1_right">
             <img src="IMG/header right fondu.png" alt="body_L1_right">
