update blue fade

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
         <div class="body_L1_fond">
             <h1>Martin Parizet</h1>
+            <img class="blue_fade" src="IMG/blue fade.png" alt="">
             <div class="body_L1_box">
                 <p>Étudiant en BTS SIO option Slam</p>
             </div>
