debut du nouveau

--- a/index.html
+++ b/index.html
@@ -3,30 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Martin Parizet
-
-	</title>
+    <title>Portfolio Martin Parizet</title>
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
-  <body class="bg-gray-900 text-gray-300 dark">
+  <body class="bg-[#242424] text-gray-300 dark">
     <div>
-      <header class="flex justify-between items-center p-6">
-        <div class="text-white text-2xl font-bold">Le Caca</div>
-        <nav>
-          <a href="#" class="text-gray-400 ml-4">Home</a>
-          <a href="#" class="text-gray-400 ml-4">Story</a>
-          <a href="#" class="text-gray-400 ml-4">About</a>
-          <a href="#" class="text-gray-400 ml-4">Contact</a>
-		  <div>
-			<img src="Avatar.svg" alt="Avatar" class="">
-		  </div>
+      <header
+        class="flex justify-between items-center p-6 bg-[#3C3C3C] shadow-lg"
+      >
+      <div class="flex items-center gap-6">
+        <a href="https://agfagoofay.fr">
+          <img src="assets/icons/arrow_back.svg" alt="">
+        </a>
+        <a href="https://martin-parizet.agfagoofay.fr" class="flex items-center gap-6 hover:scale-105 transform hover:bg-[#3C3C3C] hover:bg-o
+         p-2 rounded-full transition duration-300">
+          <img
+            src="assets/icons/Avatar.svg"
+            alt="Avatar"
+            class="rounded-full w-10 h-10 border-2 border-gray-200"
+          />
+          <p class="text-white text-2xl font-bold">Martin Parizet</p>
+        </a>
+      </div>
+        <nav class="flex items-center">
+          <a
+            href="#"
+            class="text-gray-400 ml-4 hover:text-white transition duration-300"
+            >Home</a
+          >
+          <a
+            href="#"
+            class="text-gray-400 ml-4 hover:text-white transition duration-300"
+            >Story</a
+          >
+          <a
+            href="#"
+            class="text-gray-400 ml-4 hover:text-white transition duration-300"
+            >About</a
+          >
+          <a
+            href="#"
+            class="text-gray-400 ml-4 hover:text-white transition duration-300"
+            >Contact</a
+          >
+          <div class="ml-4"></div>
         </nav>
+      
       </header>
-      <section class="bg-white py-8 antialiased dark:bg-gray-900 md:py-16">
+      <section class="bg-white py-8 antialiased dark:bg-[#242424] md:py-16">
         <div
           class="mx-auto grid max-w-screen-xl px-4 pb-8 md:grid-cols-12 lg:gap-12 lg:pb-16 xl:gap-0"
         >
@@ -41,7 +70,7 @@
             <p
               class="mb-4 max-w-2xl text-gray-500 dark:text-gray-400 md:mb-12 md:text-lg mb-3 lg:mb-5 lg:text-xl"
             >
-			PORTFOLIO 2025 - futur développeur
+              PORTFOLIO 2025 - futur développeur
             </p>
             <a
               href="#"
@@ -51,15 +80,10 @@
           </div>
           <div class="hidden md:col-span-5 md:mt-0 md:flex">
             <img
-              class="dark:hidden"
-              src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/girl-shopping-list.svg"
-              alt="shopping illustration"
-            />
-            <img
-              class="hidden dark:block"
-              src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/girl-shopping-list-dark.svg"
-              alt="shopping illustration"
-            />
+            src="assets/icons/Avatar.svg"
+            alt="Avatar"
+            class="rounded-full border-2 border-gray-200"
+          />
           </div>
         </div>
         <div
@@ -270,7 +294,7 @@
       </div>
     </section>
     <section
-      class="w-4/5 mx-auto bg-gray-900 text-center pb-20 my-36 h-[400px] rounded-2xl"
+      class="w-4/5 mx-auto bg-[#242424] text-center pb-20 my-36 h-[400px] rounded-2xl"
     >
       <div class="text-center">
         <h2 class="text-white text-4xl font-bold mb-4 pt-12">
@@ -384,7 +408,7 @@
       </div>
     </section>
     <section
-      class="mesh_gradient bg-gray-900 text-center p-20 my-12 h-[400px] rounded-2xl"
+      class="mesh_gradient bg-[#242424] text-center p-20 my-12 h-[400px] rounded-2xl"
     >
       <div class="text-center">
         <h2 class="text-white text-5xl font-bold mb-4 pt-12">
@@ -403,7 +427,7 @@
         </button>
       </div>
     </section>
-    <footer class="bg-gray-900 px-20 pt-20 pb-4">
+    <footer class="bg-[#242424] px-20 pt-20 pb-4">
       <div class="flex flex-wrap justify-between">
         <div>
           <h3 class="text-white text-2xl font-bold mb-4">Le Caca</h3>
